@@ -8,6 +8,9 @@ Changes:
 - Add configuration option for tls_certcheck.
 - Add zfs snapshot rollback.
 - Add zpool import using gpt labels / gpt id.
+- Add Zend OPcache module.
+- Add APCu module.
+- Change service Webserver to use FastCGI.
 - Increase allowed length of zfs dataset name and zfs volume name to 60 characters.
 - Add mounting (read-only) support for EXT4 drives.
 - UPS monitoring username & password can be set/changed.
